--- a/.github/workflows/auto-build-caddy.yml
+++ b/.github/workflows/auto-build-caddy.yml
@@ -10,7 +10,6 @@ env:
   SOURCE_REPO: simtelboy/caddysinglefile
   TARGET_REPO: simtelboy/eye
   FORWARDPROXY_COMMIT: 165adbd88c505fe98f6ba1cb8404d3c2d2edb793
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   check-version:
@@ -85,15 +84,17 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Caddy using xcaddy in Debian 11
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           NEW_VERSION="${{ needs.check-version.outputs.new-version }}"
           # 创建 Dockerfile
           cat > Dockerfile << EOF
           FROM debian:11
           RUN apt-get update && apt-get install -y wget git ca-certificates pkg-config libssl-dev && rm -rf /var/lib/apt/lists/*
-          RUN wget https://go.dev/dl/go1.21.5.linux-amd64.tar.gz && \
-              tar -C /usr/local -xzf go1.21.5.linux-amd64.tar.gz && \
-              rm go1.21.5.linux-amd64.tar.gz
+          RUN wget https://go.dev/dl/go1.25.2.linux-amd64.tar.gz && \
+              tar -C /usr/local -xzf go1.25.2.linux-amd64.tar.gz && \
+              rm go1.25.2.linux-amd64.tar.gz
           ENV GOPATH=/root/go
           ENV PATH=/usr/local/go/bin:/root/go/bin:\$PATH
           RUN git config --global url."https://x-access-token:${GITHUB_TOKEN}@github.com".insteadOf "https://github.com" && \
@@ -106,8 +107,8 @@ jobs:
               --with github.com/caddyserver/forwardproxy=github.com/simtelboy/caddysinglefile@${FORWARDPROXY_COMMIT} && \
               ls -la /app/  # 调试：检查 caddy 是否生成
           EOF
-          # 构建并重命名二进制文件
-          docker build -t caddy-build .
+          # 构建并提取二进制（传递 GITHUB_TOKEN 作为 build-arg）
+          docker build --build-arg GITHUB_TOKEN=${GITHUB_TOKEN} -t caddy-build .
           docker run --rm -v $(pwd):/output caddy-build cp /app/caddy /output/
           mv caddy caddy-v${NEW_VERSION}-linux-amd64
           echo "Built caddy binary: $(ls -la caddy-v${NEW_VERSION}-linux-amd64)"
