--- a/.github/workflows/auto-build-caddy.yml
+++ b/.github/workflows/auto-build-caddy.yml
@@ -129,24 +129,30 @@
             TAG="v$NEW_VERSION"
             ASSET_PATH="caddy-v${NEW_VERSION}-linux-amd64"
 
-            RELEASE_NOTES="## 天神之眼 v${NEW_VERSION}
+            cat > release_notes.md << 'NOTES_EOF'
+            ## 天神之眼 v$NEW_VERSION
 
             ### 📦 编译信息
-            - **编译时间**: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
+            - **编译时间**: $BUILD_TIME
             - **运行环境**: Debian 11+
 
             ### 📥 安装方法
-            \`\`\`bash
-            wget https://github.com/${{ env.TARGET_REPO }}/releases/download/${TAG}/${ASSET_PATH}
-            chmod +x ${ASSET_PATH}
-            sudo mv ${ASSET_PATH} /usr/local/bin/caddy
+            ```bash
+            wget https://github.com/$TARGET_REPO/releases/download/$TAG/$ASSET_PATH
+            chmod +x $ASSET_PATH
+            sudo mv $ASSET_PATH /usr/local/bin/caddy
             caddy version
-            \`\`\`
+            ```
+            NOTES_EOF
 
-            ---
-            
+            sed -i "s/\$NEW_VERSION/$NEW_VERSION/g" release_notes.md
+            sed -i "s/\$SOURCE_BRANCH/${{ env.SOURCE_BRANCH }}/g" release_notes.md
+            sed -i "s/\$BUILD_TIME/$(date -u '+%Y-%m-%d %H:%M:%S UTC')/g" release_notes.md
+            sed -i "s/\$TARGET_REPO/${{ env.TARGET_REPO }}/g" release_notes.md
+            sed -i "s/\$TAG/$TAG/g" release_notes.md
+            sed -i "s/\$ASSET_PATH/$ASSET_PATH/g" release_notes.md
 
-            gh release create "$TAG" --title "天神之眼 v${NEW_VERSION}" --notes "$RELEASE_NOTES" "$ASSET_PATH" \
+            gh release create "$TAG" --title "天神之眼 v${NEW_VERSION}" --notes-file release_notes.md "$ASSET_PATH" \
               --repo ${{ env.TARGET_REPO }} || echo "Release already exists"
 
             gh release upload "$TAG" "$ASSET_PATH" --repo ${{ env.TARGET_REPO }} --clobber
